<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_my_order"
        android:icon="@drawable/my_order"
        android:title="@string/my_booking" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/home_heart"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_about_us"
        android:icon="@drawable/about_us"
        android:title="@string/about_us" />

</menu>
