<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activitys.EnableLocationServices">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_top_image"/>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="230dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/background_bottom_image"/>

        <LinearLayout
            android:id="@+id/location_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_icon"
                android:visibility="gone"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mobile_location_icon"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/enable_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/app_colour"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                android:padding="20dp"
                android:text="@string/enable_location_services"/>

            <TextView
                android:id="@+id/enable_location_text_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:lineSpacingExtra="10dp"
                android:text="@string/get_recommendations_of_grate_businesses"/>

            <LinearLayout
                android:id="@+id/location_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="12dp"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:onClick="get_location"
                android:background="@drawable/button_background"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:adjustViewBounds="true"
                    android:maxHeight="24dp"
                    android:maxWidth="24dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:fontFamily="@font/oswald"
                    android:layout_marginStart="14dp"
                    android:textColor="@color/white"
                    android:paddingEnd="30dp"
                    android:gravity="center"
                    android:text="@string/turn_on_location_services" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/not_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="12dp"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:fontFamily="@font/oswald"
                    android:textColor="@color/app_colour"
                    android:gravity="center"
                    android:text="@string/not_now" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:weightSum="1"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:padding="12dp"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:fontFamily="@font/oswald"
                        android:textColor="@color/app_colour"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:text="@string/sign_up_" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:padding="12dp"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:fontFamily="@font/oswald"
                        android:textColor="@color/app_colour"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:text="@string/login" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>