<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.NavigationFragments.About_us_Fragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/app_colour">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald"
                    android:text="@string/about_us"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:id="@+id/clickOn_term_and_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:padding="18dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_and_condition"
                    android:textColor="@color/app_colour"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/arrow_right"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:padding="18dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textColor="@color/app_colour"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/arrow_right"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:padding="18dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/app_colour"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/arrow_right"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@color/gray"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>